tweaks based on playtest with andrew, new logo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <div id="logo">
       <img src="dusk.png" alt="dusk">
     </div>
-    <p>an interactive fiction murder mystery</p>
+    <p>
+      an interactive fiction murder mystery
+    </p>
+    <p>
+      relax, pour a cup of tea, take notes, play some music.
+      this shouldn't take more than an hour.
+    </p>
     <p>
       <a href="play">play</a>
     </p>
