--- a/play/index.html
+++ b/play/index.html
@@ -13,7 +13,7 @@
           Commands: NORTH, N, EAST, E, SOUTH, S, WEST, W, ENTER, EN, LEAVE, LE,
           GET, TALK,
           <br><br>
-          and anything that is in all CAPS.
+          And try typing anything you see in all CAPS.
         </div>
         <div id="items"></div>
       </div>
