--- a/play/index.html
+++ b/play/index.html
@@ -10,7 +10,7 @@
     <div id="content">
       <div id="sidebar">
         <div id="help">
-          Commands: NORTH, N, EAST, E, SOUTH, S, WEST, W, ENTER, EN, LEAVE, LE,
+          Commands: NORTH or N, EAST or E, SOUTH or S, WEST or W, ENTER or EN, LEAVE or LE,
           GET, TALK,
           <br><br>
           And try typing anything you see in all CAPS.
