almost removed all help text in favor of contextual hints

--- a/play/index.html
+++ b/play/index.html
@@ -10,10 +10,7 @@
     <div id="content">
       <div id="sidebar">
         <div id="help">
-          Commands: NORTH or N, EAST or E, SOUTH or S, WEST or W, ENTER or EN, LEAVE or LE,
-          GET, TALK,
-          <br><br>
-          And try typing anything you see in all CAPS.
+          Try typing anything you see in all CAPS.
         </div>
         <div id="items"></div>
       </div>
