minor style tweak, renamed judge

--- a/play/index.html
+++ b/play/index.html
@@ -10,7 +10,7 @@
     <div id="content">
       <div id="sidebar">
         <div id="help">
-          Try typing anything you see in all CAPS.
+          Anything in all CAPS is a command you can type.
         </div>
         <div id="items"></div>
       </div>
